# feature_blocks

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  baseline_gpu.py  benchmark.py  cpu_vs_gpu_benchmark.py  scaling_benchmark.py  synthetic_data.py  utils.py
config/: cellprofiler_example.toml  example_config.toml
examples/: basic_extraction.py  config_based_workflow.py
feature_blocks/features/: __init__.py  extractors.py
feature_blocks/image/: _image.py  _mask.py
src/feature_blocks/: __init__.py  _constants.py  _logging.py  cluster.py  main.py
src/feature_blocks/assign/: __init__.py  _assign.py
src/feature_blocks/backend/: __init__.py  _backend.py  _dask.py  _sequential.py  _zarr_plugin.py
src/feature_blocks/cli/: app.py
src/feature_blocks/cluster/: __init__.py  _cluster.py
src/feature_blocks/features/: __init__.py  _extract.py  blocks.py  extractors.py  processor.py
src/feature_blocks/image/: __init__.py  _image.py  _mask.py
src/feature_blocks/io/: __init__.py  _ome_zarr.py
src/feature_blocks/models/: __init__.py  cellprofiler.py  conv.py  dinov2.py  dummy_features.py  gigapath_tile.py  gigapath_tile_patch.py  h_optimus_0.py  lbp.py  phikon.py  phikon_patch.py  tiny_vit.py  uni.py
src/feature_blocks/segmentation/: __init__.py  _segmentation.py
src/feature_blocks/slice/: __init__.py  _slice.py
src/feature_blocks/task/: __init__.py  _infer.py  _process_region.py  _read.py  _read_with_mask.py  _task.py  _write.py
src/feature_blocks/utility/: __init__.py  _parse.py  _rasterize.py  _spatialdata.py  _utils.py  colourmap.py
src/tests/: test_feature_extraction.py
tests/: test_cellprofiler_extraction.py  test_cli.py  test_feature_extraction.py  test_slice.py
