[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "feature_blocks"
version = "1.0.0"
description = "Extract and cluster features from image blocks."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
dependencies = [
    # "dask<=2024.11.2",
    "dask",
    "dask_jobqueue",
    "distributed",
    "typer",
    "numpy",
    "scikit-image",
    "transformers",
    "timm",
    "einops",
    "opencv-python",
    "shapely",
    "spatial_image",
    "bokeh",
    "matplotlib",
    "ipycytoscape",
    "geopandas",
    "spatialdata==0.6.1",
    "rasterio",
    "cp-measure",
    "pycytominer",
    "toml",
    "ome-zarr",
    "zarr>=3.0.0",
    "anndata>=0.12.0",
]

[project.scripts]
feature_blocks = "feature_blocks.main:app"

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu128 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
benchmarking = [
  "jupyterlab>=4.5.0",
  "scanpy[leiden]",
  "spatialdata_plot",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]
cache-keys = [
  { file = "pyproject.toml" }, 
  { file = "**/**.py.txt" }, # Ensure rebuilds are triggered upon code changes
  { git = { commit = true } }
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true