[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "feature_blocks"
version = "1.0.0"
description = "Extract and cluster features from image blocks."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
dependencies = [
    # Core distributed computing
    "dask>=2024.1.0",
    "dask_jobqueue",
    "distributed",

    # CLI
    "typer>=0.9.0",

    # Core data
    "numpy>=1.26,<3",
    "scikit-image>=0.22",

    # ML models
    "transformers>=4.40,<5",
    "timm>=1.0,<2",
    "einops>=0.7",

    # Image processing
    "opencv-python>=4.9",

    # Geospatial
    "shapely>=2.0",
    "geopandas>=0.14",
    "rasterio>=1.3",

    # Spatial data structures
    "spatial_image>=1.0",
    "spatialdata>=0.6.1,<0.7",
    "ome-zarr>=0.10",
    "zarr>=3.0.0",
    "anndata>=0.12.0",

    # CellProfiler features
    "cp-measure",
    "pycytominer>=1.0",

    # Config & viz
    "toml>=0.10",
    "matplotlib>=3.8",
]

[project.scripts]
feature_blocks = "feature_blocks.main:app"

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu128 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
benchmarking = [
  "jupyterlab>=4.5.0",
  "scanpy[leiden]",
  "spatialdata_plot",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]
cache-keys = [
  { file = "pyproject.toml" }, 
  { file = "**/**.py.txt" }, # Ensure rebuilds are triggered upon code changes
  { git = { commit = true } }
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true