[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "feature_blocks"
version = "1.0.0"
description = "Extract and cluster features from image blocks."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE.txt" }
dependencies = [
    "dask[distributed]>=2025.1.0",
    "dask_jobqueue>=0.9",
    "typer>=0.15.0",
    "numpy>=2.1,<3",
    "scikit-image>=0.24",
    "transformers>=4.50,<5",
    "timm>=1.0,<2",
    "einops>=0.8",
    "opencv-python>=4.11",
    "shapely>=2.1",
    "geopandas>=1.0",
    "rasterio>=1.4",
    "spatial_image>=1.2",
    "spatialdata>=0.6.1,<0.7",
    "ome-zarr>=0.13",
    "zarr>=3.0.0",
    "anndata>=0.12.0",
    "cp-measure>=0.1.13",
    "pycytominer>=1.4",
    "torch>=2.7.0,<3",
    "torchvision>=0.22.0,<1",
    "toml>=0.10",
    "matplotlib>=3.10",
]

[project.scripts]
feature_blocks = "feature_blocks.main:app"

[project.optional-dependencies]
cu128 = [
  "torch>=2.7.0,<3",
  "torchvision>=0.22.0,<1",
]
benchmarking = [
  "jupyterlab>=4.5.0",
  "scanpy[leiden]",
  "spatialdata_plot",
]

[tool.uv]
environments = [
  "sys_platform == 'linux'",
  "sys_platform == 'darwin'",
]
cache-keys = [
  { file = "pyproject.toml" }, 
  { file = "**/**.py.txt" }, # Ensure rebuilds are triggered upon code changes
  { git = { commit = true } }
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true